--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: God's Fingers
 url: "https://brave-submarine.cloudvent.net"
 baseurl:
 google_analytics_key:
-google_maps_javascript_api_key:
+google_maps_javascript_api_key: AIzaSyAlcc_BP8AMLbq-sN4tp2HcWc2CsQJd_i8
 disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
@@ -108,4 +108,3 @@ social_icons:
 _comments:
   description: Text shown when sharing on social media
   blurb: Short bio or description of this person
-
