--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: God's Fingers
 url: "https://godsfingers.kr"
 baseurl:
 google_analytics_key:
-google_maps_javascript_api_key: AIzaSyAlcc_BP8AMLbq-sN4tp2HcWc2CsQJd_i8
+google_maps_javascript_api_key: 
 disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
