--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ paginate: 5
 paginate_path: "/blog/:num/"
 
 jekyll-archives:
-  enabled: ['categories']
+  enabled: ['category']
 
 defaults:
   -
